Add new mapper, update dependencies
Add NewtonSoft since System.Json.Text messes up swagger schema.
Starting to add Client model and endpoints
