# Controllers/ClientsController.cs
@@ -1,6 +1,10 @@
 using System.Collections.Generic;
+using System.Threading;
+using System.Threading.Tasks;
 using AuthServer.Dtos;
 using AuthServer.Utilities;
+using IdentityServer4.EntityFramework.Entities;
+using Mapster;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 
@@ -16,14 +20,21 @@ namespace AuthServer.Controllers
         [Authorize(Policy = "Administrator")]
         public List<ClientDto> GetClients()
         {
-            return new List<ClientDto>();
+            return DbContext.GetAllClients().Adapt<List<ClientDto>>();
         }
 
         [HttpPut]
         [Authorize(Policy = "Administrator")]
-        public bool AddClient(ClientDto client)
+        public async Task AddClient([FromBody] ClientDto client, CancellationToken cancellationToken)
         {
-            return true;
+            await DbContext.AddClient(client.Adapt<Client>(), cancellationToken);
+        }
+
+        [HttpPatch]
+        [Authorize(Policy = "Administrator")]
+        public async Task UpdateClean([FromBody] ClientDto client, CancellationToken cancellationToken)
+        {
+            await DbContext.UpdateClient(client.Adapt<Client>(), cancellationToken);
         }
     }
 }
