# frontend/swagger.yaml
@@ -4,7 +4,7 @@ info:
   description: AuthServer Idp
   version: v1
 servers:
-  - url: https://localhost
+  - url: https://localhost:5001
 paths:
   /Account:
     post:
@@ -153,57 +153,37 @@ paths:
     put:
       tags:
         - Clients
-      parameters:
-        - name: ClientId
-          in: query
-          schema:
-            type: string
-            format: uuid
-        - name: Enabled
-          in: query
-          schema:
-            type: boolean
-        - name: ClientSecrets
-          in: query
-          schema:
-            type: array
-            items:
-              type: string
-        - name: AllowedGrantTypes
-          in: query
-          schema:
-            $ref: '#/components/schemas/GrantTypesDto'
-        - name: RedirectUris
-          in: query
-          schema:
-            type: array
-            items:
-              type: string
-        - name: AllowedScopes
-          in: query
-          schema:
-            type: array
-            items:
-              type: string
-        - name: PostLogoutRedirectUris
-          in: query
-          schema:
-            type: array
-            items:
-              type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ClientDto'
+          text/json:
+            schema:
+              $ref: '#/components/schemas/ClientDto'
+          application/*+json:
+            schema:
+              $ref: '#/components/schemas/ClientDto'
       responses:
         '200':
           description: Success
-          content:
-            text/plain:
-              schema:
-                type: boolean
-            application/json:
-              schema:
-                type: boolean
-            text/json:
-              schema:
-                type: boolean
+    patch:
+      tags:
+        - Clients
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ClientDto'
+          text/json:
+            schema:
+              $ref: '#/components/schemas/ClientDto'
+          application/*+json:
+            schema:
+              $ref: '#/components/schemas/ClientDto'
+      responses:
+        '200':
+          description: Success
   /Scopes:
     get:
       tags:
@@ -350,18 +330,37 @@ components:
     ClientDto:
       type: object
       properties:
+        id:
+          type: integer
+          format: int32
+          nullable: true
         clientId:
           type: string
-          format: uuid
+          nullable: true
         enabled:
           type: boolean
+        clientName:
+          type: string
+          nullable: true
+        description:
+          type: string
+          nullable: true
+        clientUri:
+          type: string
+          nullable: true
+        logoUri:
+          type: string
+          nullable: true
         clientSecrets:
           type: array
           items:
             type: string
           nullable: true
         allowedGrantTypes:
-          $ref: '#/components/schemas/GrantTypesDto'
+          type: array
+          items:
+            type: string
+          nullable: true
         redirectUris:
           type: array
           items:
@@ -377,9 +376,17 @@ components:
           items:
             type: string
           nullable: true
-      additionalProperties: false
-    GrantTypesDto:
-      type: object
+        created:
+          type: string
+          format: date-time
+        updated:
+          type: string
+          format: date-time
+          nullable: true
+        lastAccessed:
+          type: string
+          format: date-time
+          nullable: true
       additionalProperties: false
     LoginRequest:
       type: object
